--- a/src/mono/mono/mini/CMakeLists.txt
+++ b/src/mono/mono/mini/CMakeLists.txt
@@ -168,15 +168,10 @@ set(mini_common_sources
     monovm.c)
 
 set(debugger_sources
-  debugger-engine.h
-  debugger-engine.c
-  debugger-agent.h
   debugger-agent.c
+  debugger-agent.h
   debugger-protocol.h
-  debugger-protocol.c
-  debugger-agent-stubs.c
-  debugger-state-machine.h
-  debugger-state-machine.c)
+  debugger-protocol.c)
 
 set(amd64_sources
     mini-amd64.c
